--- a/.github/workflows/scheduled-release.yml
+++ b/.github/workflows/scheduled-release.yml
@@ -2,7 +2,7 @@ name: Scheduled Crawl & Release
 
 on:
   schedule:
-    - cron: "30 3 * * *"   # 每天 UTC 03:30 运行
+    - cron: '0 0 1 1,4,7,10 *'    # 每天 UTC 03:30 运行
   workflow_dispatch: {}     # 支持手动触发
 
 permissions:
