--- a/.github/workflows/scheduled-release.yml
+++ b/.github/workflows/scheduled-release.yml
@@ -2,11 +2,11 @@ name: Scheduled Crawl & Release
 
 on:
   schedule:
-    - cron: '0 0 1 1,4,7,10 *'    
-  workflow_dispatch: {}     # 支持手动触发
+    - cron: '0 0 1 1,4,7,10 *' # 每季度（1,4,7,10月）的1号凌晨0点执行
+  workflow_dispatch: {}      # 支持手动触发
 
 permissions:
-  contents: write
+  contents: write # 允许 GITHUB_TOKEN 写入仓库内容（提交文件、创建Release）
 
 jobs:
   run-and-release:
@@ -16,13 +16,14 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          # 获取所有历史记录，以便正确比较文件变更
+          # 获取所有历史记录，以便正确比较和提交文件变更
           fetch-depth: 0
 
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: 'pip' # [优化] 增加pip缓存，加快后续构建速度
 
       - name: Install Dependencies
         run: |
@@ -31,26 +32,25 @@ jobs:
 
       - name: Install 7-Zip
         run: sudo apt-get update && sudo apt-get install -y p7zip-full
-              
+
       - name: Install Playwright Browsers
         run: playwright install --with-deps
 
       - name: Run Crawler and Downloader Script
-        run: |
-          python script.py
-          mkdir -p downloads_temp
-          mkdir -p downloads_final
-          
+        run: python script.py
 
       - name: Commit History File if Changed
+        id: commit_history
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          # 只添加指定的文件，避免意外添加其他文件
           git add processed_urls.txt
-          # 检查暂存区是否有变更
+
           if ! git diff --cached --quiet; then
             git commit -m "chore: auto update processed_urls.txt [skip ci]"
             git push
+            echo "Pushed updated processed_urls.txt"
           else
             echo "No changes to processed_urls.txt."
           fi
@@ -64,20 +64,22 @@ jobs:
             TAG="v$(date -u +'%Y%m%d-%H%M%S')"
             NAME="Auto Release $(date -u +'%Y-%m-%d %H:%M:%S') UTC"
             ZIP_NAME="downloads-${TAG}.zip"
-            
-            # 将最终分类好的文件夹压缩
-            7z a -tzip "$ZIP_NAME" ./downloads_final/*
-            
+
+            # [修正] 改进压缩命令，进入目录进行压缩，避免在zip包中包含父目录
+            (cd downloads_final && 7z a -tzip "../${ZIP_NAME}" .)
+
             echo "TAG=${TAG}" >> $GITHUB_ENV
             echo "NAME=${NAME}" >> $GITHUB_ENV
             echo "ZIP_NAME=${ZIP_NAME}" >> $GITHUB_ENV
             echo "HAS_FILES=true" >> $GITHUB_ENV
-            
+
+            # [优化] 生成更详细的 Release Notes
             {
               echo "### 自动发布"
               echo ""
               echo "- **时间**: $(date -u +'%Y-%m-%d %H:%M:%S') UTC"
-              echo "- **历史记录**: \`processed_urls.txt\`"
+              echo "- **变更记录**: [查看 commit](https://github.com/${{ github.repository }}/commit/$(git rev-parse HEAD))"
+              echo "- **历史记录文件**: \`processed_urls.txt\`"
               echo "- **下载包**: \`${ZIP_NAME}\`"
             } > RELEASE_NOTES.md
           else
@@ -86,6 +88,8 @@ jobs:
           fi
 
       - name: Create GitHub Release
+        # [修正] 增加条件判断，仅在有新文件时才创建 Release
+        if: steps.prepare_release.outputs.HAS_FILES == 'true' || env.HAS_FILES == 'true'
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ env.TAG }}
@@ -94,3 +98,4 @@ jobs:
           files: ${{ env.ZIP_NAME }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
