--- a/.github/workflows/scheduled-release.yml
+++ b/.github/workflows/scheduled-release.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add processed_urls.txt
+          git add .
           if ! git diff --cached --quiet; then
             git commit -m "chore: auto update processed_urls.txt [skip ci]"
             git push
